<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    >



        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/result_list"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                />

            <TextView
                android:id="@+id/text_view_error"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_above="@id/button_retry"
                android:layout_margin="8dp"
                android:gravity="center_horizontal"
                android:visibility="gone"
                tools:text="An error occurred"
                tools:visibility="visible" />



            <Button
                android:id="@+id/button_retry"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/retry"
                android:visibility="gone"
                tools:visibility="visible" />

            <TextView
                android:id="@+id/text_view_no_results"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/no_results_found"
                android:visibility="gone"
                tools:visibility="visible" />

            <TextView
                android:id="@+id/text_view_instructions"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/search_instructions"
                android:visibility="gone"
                tools:visibility="visible" />

        </RelativeLayout>



</androidx.constraintlayout.widget.ConstraintLayout>
