<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:fitsSystemWindows="true"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="350dp"
        android:layout_marginTop="0dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/image_detail"
        android:fitsSystemWindows="true"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/bg" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="2dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textTitle"
                    android:layout_width="150dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="16dp"
                    android:fontFamily="@font/actor"
                    android:text="@string/title_text"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <View android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1" />

                <ImageView
                    android:id="@+id/favoriteImage"
                    android:layout_width="56dp"
                    android:layout_height="56dp"
                    android:layout_gravity="end"
                    android:src="@drawable/ic_favorite_border_24" />

            </LinearLayout>


        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="2dp"
            android:paddingTop="8dp">

            <TextView
                android:id="@+id/textViewAbout"
                android:layout_width="wrap_content"
                android:layout_height="32dp"
                android:layout_marginStart="16dp"
                android:fontFamily="@font/actor"
                android:text="@string/about"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold" />


            <TextView
                android:id="@+id/textDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:scrollbars="vertical"
                android:text="@string/description" />

        </LinearLayout>



    </LinearLayout>

</androidx.core.widget.NestedScrollView>

