<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:id="@+id/signUp_section"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/signUp_message"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="40dp"
                android:layout_marginTop="60dp"
                android:layout_marginBottom="60dp"
                android:text="@string/sign_up_message"
                android:textAlignment="center"
                android:textSize="34dp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/signUp_email"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/signUp_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="40dp"
                android:layout_marginBottom="60dp"
                android:hint="@string/email_address"
                android:inputType="textEmailAddress"
                android:padding="13dp"
                android:textSize="20sp"
                app:layout_constraintBottom_toTopOf="@+id/signUp_password"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/signUp_message" />

            <EditText
                android:id="@+id/signUp_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="40dp"
                android:layout_marginBottom="20dp"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:padding="13dp"
                android:textSize="20sp"
                app:layout_constraintBottom_toTopOf="@id/signUp_buttonOk"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/signUp_email" />

            <Button
                android:id="@+id/signUp_buttonOk"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_marginHorizontal="80dp"
                android:layout_marginTop="60dp"
                android:layout_marginBottom="40dp"
                android:text="@string/sign_up"
                android:textSize="20dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/signUp_password" />

        </LinearLayout>

    </ScrollView>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/signUp_loadingSection"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white_transparent"
        android:visibility="invisible">

        <ProgressBar
            android:id="@+id/signUp_progressBar"
            android:layout_width="150dp"
            android:layout_height="150dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>